[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,25 @@
 <html>
+    
+    <head>
+      <title>
+          THis Is First Article From MAthan
+      </title>  
+    </head>
+    <body>
+        <div>
+            123
+        </div>
+        <hr/>
+        <div>
+            Article One
+        </div>
+        <div>
+            22-03-2017
+        </div>
+        <div>
+            <p>
+                This is the content of the article
+            </p>
+        </div>
+    </body>
 </html>
