--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/madi.png" class="img-large"/>
+            <img src="https://plus.google.com/u/0/+ActorVijay" class="img-large"/>
         </div>
         <br>
         <div class="center text-big bold">
