--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am mathankumar from    imad.dgydydhxfxgxyxgdgxfxhdgdhdgdgdhdhdgdydgdgdydgdhdgxgdgdysgdgsgdykdgdydgxgdyxgdhxvxhsgjstjstd.
+            Hi! I am mathankumar from   
         </div>
         <h>
             hi friends
