[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
     <head>
-        <link href="/ui/style.css" rel="stylesheet" />
+        <link href="https://plus.google.com/u/0/+ActorVijay" rel="stylesheet" />
     </head>
     <body>
         <div class="center">
-            <img src="https://plus.google.com/u/0/+ActorVijay" class="img-large"/>
+            <img src="" class="img-large"/>
         </div>
         <br>
         <div class="center text-big bold">
