[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am mathankumar from   
+            Hi! I am mathankumar from   imad
         </div>
         <h>
             hi friends
