[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,1 +1,26 @@
+<html>
+    
+    <head>
+      <title>
+          THis Is Second Article From MAthan
+      </title>  
+    </head>
+    <body>
+        <div>
+            123
+        </div>
+        <hr/>
+        <div>
+            Article Two
+        </div>
+        <div>
+            22-03-2017
+        </div>
+        <div>
+            <p>
+                This is the content of the article
+            </p>
+        </div>
+    </body>
+</html>
 
