[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -2,7 +2,7 @@
     
     <head>
       <title>
-          THis Is First Article From MAthan
+          THis Is Three Article From MAthan
       </title>  
     </head>
     <body>
@@ -11,7 +11,7 @@
         </div>
         <hr/>
         <div>
-            Article One
+            Article Three
         </div>
         <div>
             22-03-2017
