[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,23 +3,33 @@
     <head>
       <title>
           THis Is First Article From MAthan
-      </title>  
+      </title> 
+     <style>
+         .conatiner{
+             max-width:800px;
+             margin:0 auto;
+             color:blue;
+             font-family:sans-serif;
+         } 
+     </style>
     </head>
     <body>
-        <div>
-            123
-        </div>
-        <hr/>
-        <div>
-            Article One
-        </div>
-        <div>
-            22-03-2017
-        </div>
-        <div>
-            <p>
-                This is the content of the article
-            </p>
+       <div class="container" >
+            <div>
+                123
+            </div>
+            <hr/>
+            <div>
+                Article One
+            </div>
+            <div>
+                22-03-2017
+            </div>
+            <div>
+                <p>
+                    This is the content of the article
+                </p>
+            </div>
         </div>
     </body>
 </html>
