[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -16,7 +16,7 @@
     <body>
        <div class="container" >
             <div>
-                123
+                home
             </div>
             <hr/>
             <div>
