--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -4,6 +4,8 @@
       <title>
           THis Is Second Article From MAthan
       </title>  
+       <meta name ="viewport" content ="width-device-width,initial-scale=1">
+
     </head>
     <body>
         <div>
