--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,6 +4,7 @@
       <title>
           THis Is First Article From MAthan
       </title> 
+      <link href="/ui/style.css" rel="stylrsheet" />
      <style>
          .conatiner{
              max-width:800px;
