[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -4,7 +4,10 @@
       <title>
           THis Is Three Article From MAthan
       </title>  
+      <meta name ="viewport" content ="width-device-width,initial-scale=1">
+      <link href="/ui/style.css" rel="stylrsheet" />
     </head>
+    
     <body>
         <div>
             123
