--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,20 +4,13 @@
       <title>
           THis Is First Article From MAthan
       </title> 
+      <meta name ="viewport" content ="width-device-width,initial-scale=1">
       <link href="/ui/style.css" rel="stylrsheet" />
-     <style>
-         .conatiner{
-             max-width:800px;
-             margin:0 auto;
-             color:blue;
-             font-family:sans-serif;
-         } 
-     </style>
     </head>
     <body>
        <div class="container" >
             <div>
-                home
+                Home
             </div>
             <hr/>
             <div>
