--- a/ui/article-four.html
+++ b/ui/article-four.html
@@ -5,6 +5,7 @@
           THis Is Fourth Article From MAthan
       </title>  
       <meta name ="viewport" content ="width-device-width,initial-scale=1">
+      <link href="/ui/style.css" rel="stylrsheet" />
     </head>
     <body>
         <div>
