[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -14,6 +14,9 @@
         <h>
             hi friends
         </h>
+        <script>
+            alert('Hi I am Sjava Script');
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
