[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -15,7 +15,7 @@
             hi friends
         </h>
         <script>
-            alert('Hi I am Sjava Script');
+            alert('Hi, I\'m Sjava Script');
         </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
