[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
             <img src="/ui/modi.png" class="img-large"/>
         </div>
         <br>
-        <div class="center text-big bold">
+        <div id="main-text" class="center text-big bold">
             Hi! I am mathankumar from   imad 
         </div>
         <h>
