--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img id='modi' src="/ui/modi.png" class="img-large"/>
+            <img id='modi' src="/ui/modi.png" class="img-medium"/>
         </div>
         <br>
         <div id="main-text" class="center text-big bold">
